--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+:root {
+    --color-primary: #2C3EA1;
+    --heading-color: #000;
+    --text-color: #71717B;
+    --bg-lightgray: #F9FAFB;
+    --font-primary: "Inter", sans-serif;
+}
+body {
+    font-family: var(--font-primary);
+}
