--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,37 @@
 @import "tailwindcss";
+
+.no-scrollbar{
+  overflow: auto;
+  -ms-overflow-style: none;   /* IE & Edge */
+  scrollbar-width: none;      /* Firefox */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;              /* Chrome, Safari */
+}
+
+
+html {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(180, 180, 180, 0.35) transparent;
+}
+
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(180, 180, 180, 0.35);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(180, 180, 180, 0.6);
+}
+
